# qt_ios_libs_bug

./: .gitmodules  CMakeLists.txt  foo.pro  main.cpp  main.qml
